# contelia

./: .zou-flow  Cargo.toml  Makefile  README.md  update-version.json
assets/cgi-bin/: contelia
cgi-bin/: contelia.hsl
src/: book.rs  books.rs  buttons.rs  decrypt.rs  gpio.rs  lib.rs  main.rs  player.rs  renderer.rs  screen.rs  services.rs  story_pack.rs  timeout.rs
src/book/: book.rs  story_archive.rs  story_fs.rs  story_json.rs  story_pack.rs
test/: story.json
