[package]
name = "contelia"
version = "0.5.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive", "min_const_generics"] }
byteorder = "1.5"
clap = { version = "4.0", features = ["derive"] }
evdev = "0.13"
framebuffer = "0.3"
image = "0.25"
nix = { version = "0.29", features = ["ioctl", "fs", "event"] }
rand = "0.9"
rodio = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
uuid = { version = "1.18", features = ["v4"] }